fix: Don't break view if line is too long

--- a/src/renderer/styles/logview.less
+++ b/src/renderer/styles/logview.less
@@ -6,6 +6,10 @@
   #content {
     height: 100vh;
     width: 100%;
+
+    &.isSidebarOpen {
+      width: calc(100% - 300px)
+    }
   }
 
   .alert {
